--- a/index1.html
+++ b/index1.html
@@ -35,7 +35,7 @@
                         <li class="l2">Oil</li>
                     </ul>
                     <ol>
-                        <li class="item">Lorem ipsum dolor sit amet consectetur.</li>
+                        <li class="item">Lorem ipsum dolo sit amet consectetur.</li>
                         <li class="item">Lorem ipsum dolor sit.</li>
                         <li class="item">Lorem ipsum dolor sit amet.</li>
                         <li class="item">Lorem, ipsum dolor sit amet consectetur.</li>
